kemmeren; slofstra; warmerdam

--- a/book.bib
+++ b/book.bib
@@ -709,6 +709,17 @@
   publisher={Elsevier}
 }
 
+@article{kemmeren2016,
+  title={Effectiveness of blended depression treatment for adults in specialised mental healthcare: study protocol for a randomised controlled trial},
+  author={Kemmeren, LL and Van Schaik, DJF and Riper, H and Kleiboer, AM and Bosmans, Judith E and Smit, Johannes H},
+  journal={BMC psychiatry},
+  volume={16},
+  number={1},
+  pages={113},
+  year={2016},
+  publisher={BioMed Central}
+}
+
 @InCollection{Kirchner2013,
   author    = {Kirchner, Thomas R. and Shiffman, Saul},
   title     = {{Ecological Momentary Assessment}},
@@ -1191,6 +1202,16 @@ year = {1999}
   url             = {http://doi.apa.org/getdoi.cfm?doi=10.1037/a0017074},
 }
 
+@article{Slofstra2017,
+  title={Imagine your mood: Study design and protocol of a randomized controlled micro-trial using app-based experience sampling methodology to explore processes of change during relapse prevention interventions for recurrent depression},
+  author={Slofstra, Christien and Klein, Nicola S and Nauta, Maaike H and Wichers, Marieke and Batalas, Nikolaos and Bockting, Claudi LH},
+  journal={Contemporary clinical trials communications},
+  volume={7},
+  pages={172--178},
+  year={2017},
+  publisher={Elsevier}
+}
+
 @Article{Smyth2003,
   author  = {Smyth, Joshua M. and Stone, Arthur A.},
   title   = {Ecological momentary assessment research in behavioral medicine},
@@ -1423,6 +1444,16 @@ year = {1999}
   month   = {dec},
   doi     = {10.1016/j.janxdis.2014.09.022},
   url     = {http://linkinghub.elsevier.com/retrieve/pii/S0887618514001467},
+}
+
+@article{warmerdam2012,
+  title={Innovative ICT solutions to improve treatment outcomes for depression: the ICT4Depression project.},
+  author={Warmerdam, Lisanne and Riper, Heleen and Klein, Michel CA and van de Ven, Pepijn and Rocha, Artur and Henriques, Mario Ricardo and Tousset, Eric and Silva, Hugo and Andersson, Gerhard and Cuijpers, Pim},
+  journal={Annual Review of Cybertherapy and Telemedicine},
+  volume={181},
+  number={1},
+  pages={339--343},
+  year={2012}
 }
 
 @article{Watson1988,
